test/fail/or-pattern-infer.mo
func no_infer(#a or #b) {}
